# llmesh

./: .env.example  .gitignore  LICENSE  README.md  launcher.c  pyproject.toml  run.py  setup.py
backend/: database.py  main.py
backend/core/: db_utils.py  exporter.py  importer.py  pool_sync.py
backend/models/: config.py
backend/routers/: ai_suggest.py  build.py  io.py  playground.py  probe.py  prompt_optimizer.py  providers.py  scene_prompts_generated.py  settings.py  simulate.py  task_groups.py
backend/utils/: llm_invoke.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts  style.css
frontend/src/api/: index.ts
frontend/src/router/: index.ts
frontend/src/views/: Playground.vue  PlaygroundHistory.vue  PromptOptimizer.vue  Providers.vue  Settings.vue  Simulator.vue  TaskGroups.vue
llmesh/: __init__.py  config.py  logger.py  pool.py
llmesh.app/Contents/: Info.plist
scripts/: gen_scene_prompts.py
