[project]
name = "llmesh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.135.3",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "sqlcipher3-wheels>=0.5.7",
    "sqlmodel>=0.0.38",
    "uvicorn[standard]>=0.44.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.9",
]
