[project]
name = "llmesh"
version = "0.1.0"
description = "Stateful LLM routing SDK & config management UI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.135.3",
    "langchain-openai>=1.1.12",
    "openai>=2.30.0",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.24",
    "setuptools>=82.0.1",
    "sqlcipher3-wheels>=0.5.7",
    "sqlmodel>=0.0.38",
    "twine>=6.2.0",
    "uvicorn[standard]>=0.44.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.9",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["llmesh*"]
